Testing button load on mobile site - returned button to normal anf fixed missing semi-colon in css to test if that was the problem

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,7 +15,7 @@ mat-spinner.progressSpinner {
 }
 
 .primaryButton {
-  background-color: $primaryColor
+  background-color: $primaryColor;
 }
 
 .loadMore {
